--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -43,9 +43,9 @@
 <header id="header" class="fixed-top d-flex align-items-center  header-transparent ">
   <div class="container d-flex align-items-center justify-content-between">
     <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/visatoirelandlogo.jpg' %}" alt="" class="img-fluid"></a>
-    <a href="#"> <img src="{% static 'assets/img/Animated-Flag-Ireland.gif' %}" style="height:40px"> </a>
+    <a href="#"> <img src="{% static 'assets/img/Animated-Flag-Ireland.gif' %}" style="height:40px;margin-right:100px;"> </a>
     <!-- <div class="nav-inspiring"> -->
-      <p class="body">"Through Hard Times Prosperity"<br></p>
+      <p class="body" style="color:white; text-align:left;">"Through Hard Times Prosperity"<br></p>
     <!-- </div> -->
 
 
