short visa final

--- a/ireland_app/templates/shortvisa.html
+++ b/ireland_app/templates/shortvisa.html
@@ -106,13 +106,22 @@
               <li><i class="ri-check-double-line"></i>A short stay tourist visa allows you to travel to Ireland for tourism or study for up to 90 days, subject to the conditions described below. All short stay visas are also called 'C' visas.</li>
               <!-- <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li> -->
             </ul>
+            <i>Summary</i>
+          <ul>
+            <li><i class="ri-check-double-line"></i>that you will leave Ireland before your visa/permission to remain expires;</li>
+            <li><i class="ri-check-double-line"></i>that you have sufficient resources to look after yourself while you are here;</li>
+            <li><i class="ri-check-double-line"></i>that you are of good character and have told the truth in your application and have not left out anything important;</li>
+            <li><i class="ri-check-double-line"></i>that you are not using a visa to Ireland as a way of getting around lawful entry to the UK or the rest of the EU.</li>
+
+            <!-- <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li> -->
+          </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
             <img src="assets/img/features-3.png" alt="" class="img-fluid">
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="tab-4">
+      <!-- <div class="tab-pane" id="tab-4">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
             <h3>Omnis fugiat ea explicabo sunt dolorum asperiores sequi inventore rerum</h3>
@@ -135,26 +144,26 @@
             <img src="assets/img/features-4.png" alt="" class="img-fluid">
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-4" data-aos="zoom-in">
-        <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
+        <a class="nav-link active show" data-bs-toggle="tab" href="#tab-4">
           <i class="ri-gps-line"></i>
-          <h4 class="d-none d-lg-block">Policy for consideration of short stay ‘C’ visas</h4>
+          <h4 class="d-none d-lg-block">About this visa</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="100">
-        <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
+        <a class="nav-link" data-bs-toggle="tab" href="#tab-5">
           <i class="ri-body-scan-line"></i>
-          <h4 class="d-none d-lg-block">Assessment criteria</h4>
+          <h4 class="d-none d-lg-block">Who needs to apply</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="200">
-        <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
+        <a class="nav-link" data-bs-toggle="tab" href="#tab-6">
           <i class="ri-sun-line"></i>
-          <h4 class="d-none d-lg-block">Other imp policy</h4>
+          <h4 class="d-none d-lg-block">Special visa programmes</h4>
         </a>
       </li>
       <!-- <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
@@ -166,19 +175,25 @@
     </ul>
 
     <div class="tab-content" data-aos="fade-up">
-      <div class="tab-pane active show" id="tab-1">
+      <div class="tab-pane active show" id="tab-4">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Policy for consideration of short stay ‘C’ visas</h3>
+            <h3> About this visa</h3>
 
             <p>
-            All applicants for a short stay ‘C’ visa (whether for a single entry or multiple entries) must show that they have sufficiently strong family, social or economic ties to a place of residence in a country other than Ireland to assure the visa officer assessing the application that the projected stay in Ireland will be temporary and in accordance with the duration and conditions of the permission granted by the immigration authorities on arrival in Ireland. The maximum stay allowed under a short stay ‘C’ visa is 90 days.
+              A short stay 'C' visit (tourist) visa allows you to travel to Ireland for up to 90 days for:
+              <ul>
+                <li>Tourism</li>
+                <li>Study, eg a short term English language course</li>
+              </ul>
             </p>
             <p>
-            The responsibility for demonstrating substantial ties to a country other than Ireland rests with you. The burden of proof in all cases is on you to satisfy the visa officer. The visa officer may verify any evidence submitted in support of your application.
+          This visa does not allow you to:
+          <li><i class="ri-check-double-line"></i>Do work (paid or unpaid) of any kind</li>
+          <li><i class="ri-check-double-line"></i>Use any publicly funded services, eg a public hospital</li>
             </p>
             <p>
-              There is no right to a visa nor is there one set of documents or circumstances of application that will guarantee the approval of an application. However, the documents normally required in support of an application are set out in the ‘Guide to Supporting Documentation’ for each type of short stay ‘C’ visa.
+            Note: A visa allows you to travel to Ireland only. It does not give you permission to enter the country or to stay here. An immigration officer at border control can refuse you entry even if you have a visa.
 
             </p>
           </div>
@@ -187,21 +202,22 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="tab-2">
+
+      <div class="tab-pane" id="tab-5">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Assessment criteria</h3>
+            <h3>Who needs to apply</h3>
 
             <p class="font-italic">
               In assessing an application, a visa officer may look at the following issues:
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> that you will leave Ireland at the end of your visit;</li>
-              <li><i class="ri-check-double-line"></i>that you, or relatives or friends in Ireland who are sponsoring your visit, have enough money to support and accommodate you, without you working or accessing public funds;</li>
-              <li><i class="ri-check-double-line"></i>that you have proof of return or onward travel arrangements; </li>
-              <li><i class="ri-check-double-line"></i>that you will not breach the Common Travel Area by seeking to enter the UK via Ireland without a valid UK visa; </li>
-              <li><i class="ri-check-double-line"></i>your immigration history in relation to Ireland, the UK, the Schengen Zone and other countries; and </li>
-              <li><i class="ri-check-double-line"></i>any other issue which the visa officer deems relevant. </li>
+              <li><i class="ri-check-double-line"></i> You need a visa to come to Ireland if you travel using a passport issued by a country that is visa required or using a travel document issued by certain countries.</li>
+              <li><i class="ri-check-double-line"></i>Each traveler must apply for a separate visa. There are no family visas.</li>
+              <li><i class="ri-check-double-line"></i>A tourist visa application for a young person (aged under 18) should be made by their parent or legal guardian. </li>
+              <li><i class="ri-check-double-line"></i>You should not purchase travel tickets before you receive a decision on your visa application. </li>
+              <!-- <li><i class="ri-check-double-line"></i>your immigration history in relation to Ireland, the UK, the Schengen Zone and other countries; and </li> -->
+              <!-- <li><i class="ri-check-double-line"></i>any other issue which the visa officer deems relevant. </li> -->
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -209,22 +225,29 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="tab-3">
+
+      <div class="tab-pane" id="tab-6">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>History of serious crime/immigration abuses</h3>
-            <p>
-            If you have a history of serious crimes or a history of serious breaches of Irish or UK immigration law these can, of themselves, be reasons for refusal of a visa.
+            <h3> Special visa programmes </h3>
+            <p> <b>Travel between Ireland & UK for certain Chinese & Indian nationals</b>
             </p>
-
-            <h3>Submission of false/misleading information/documentation</h3>
-            <p>
-              <b>Important:</b> Do not include false or misleading information or documents in your application. If you do, your application may be refused. In some circumstances, you may not be allowed to appeal the visa decision and may be blocked from getting an Irish visa for 5 years.</p>
-              <i>This is the norm in many countries.</i>
             <ul>
-              <li><i class="ri-check-double-line"></i> A short stay 'C' visa is for 90 days or less.</li>
-              <li><i class="ri-check-double-line"></i>A short stay tourist visa allows you to travel to Ireland for tourism or study for up to 90 days, subject to the conditions described below. All short stay visas are also called 'C' visas.</li>
-              <!-- <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li> -->
+              <li><i class="ri-check-double-line"></i>You may be able to visit Ireland and the United Kingdom using a single Irish or UK visa if you travel using a Chinese or Indian passport.</li>
+              <li><i class="ri-check-double-line"></i>The Minister for Justice and Equality, Frances Fitzgerald, T.D., announced on 16th June, 2014 that the British Irish Visa Scheme between Ireland and the United Kingdom will commence this Autumn starting with China and India.</li>
+              <li><i class="ri-check-double-line"></i>The British Irish Visa Scheme allow for travel to and around the Common Travel Area (CTA) on a single visa. As matters stand, many overseas tourists and business visitors who wish to visit both Ireland and the UK, including Northern Ireland, need separate Irish and UK visas.</li>
+
+              <li><i class="ri-check-double-line"></i> From the Autumn the objective is that visitors from China and India will be able to travel freely within the Common Travel Area using either an Irish or UK visa. This will mean that tourists, business visitors etc. will be able, for the first time, to visit both Ireland and the UK, including Northern Ireland, on a single visa.</li>
+            </ul>
+
+            <p> <b>Travel to Ireland on a school group trip from EU/EEA or Switzerland</b>
+            </p>
+            <ul>
+              <li><i class="ri-check-double-line"></i>You may not need an Irish visa if you are a school student who is legally resident in another EU/EEA country or Switzerland and you want to come here as part of a school group trip.</li>
+              <li><i class="ri-check-double-line"></i>If you are a non-EU or EEA school student who is resident in an EU or EEA Member State and wish to travel to Ireland as part of a group school excursion you may be exempt from the requirement to be in possession of a visa in order to travel to Ireland.</li>
+              <li><i class="ri-check-double-line"></i>This exemption arises from the implementation of the European Council Decision (94/795/JHA) on a joint action adopted by the Council on the basis of Article K.3(2)(b) of the Treaty on European Union concerning travel facilities for school pupils from Non-EU Member Countries resident in a Member State. Please note that an upper age limit does not apply, provided the pupil is part of a school group.</li>
+
+              <li><i class="ri-check-double-line"></i> In order to avail of this exemption an application form must be completed by the head of your school and presented to the Irish Immigration authorities upon arrival.</li>
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -232,7 +255,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="tab-4">
+      <!-- <div class="tab-pane" id="tab-4">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
             <h3>Omnis fugiat ea explicabo sunt dolorum asperiores sequi inventore rerum</h3>
@@ -255,7 +278,7 @@
             <img src="assets/img/features-4.png" alt="" class="img-fluid">
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
 
@@ -264,5 +287,121 @@
   </div>
 </section><!-- End Features Section -->
 
+<!-- ======= F.A.Q Section ======= -->
+<section id="faq" class="faq">
+  <div class="container">
+
+    <div class="section-title" data-aos="zoom-out">
+      <h2></h2>
+      <p>Other Short Visa types in Ireland</p>
+    </div>
+
+    <ul class="faq-list">
+
+      <li>
+        <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Business visa <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq1" class="collapse" data-bs-parent=".faq-list">
+          <p>
+          A short stay 'C' business visa allows you to travel to Ireland for up to 90 days for activities related to your job, including to:
+                <ul>
+                  <li><i class="ri-check-double-line"></i>Attend meetings</li>
+                  <li><i class="ri-check-double-line"></i>Negotiate or sign agreements or contracts</li>
+                  <li><i class="ri-check-double-line"></i>Work for 14 days or less (based on the rules below)</li>
+                </ul>
+          </p>
+
+          <p>
+        This visa does not allow you to:
+                <ul>
+                  <li><i class="ri-check-double-line"></i>Attend meetings</li>
+                  <li><i class="ri-check-double-line"></i>Work in any way (paid or unpaid) for 15 days or longer</li>
+                  <li><i class="ri-check-double-line"></i>Rely on Irish public services, eg public hospitals</li>
+                </ul>
+          </p>
+
+        </div>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Family or friend’s visa <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq2" class="collapse" data-bs-parent=".faq-list">
+          <p>
+            A short stay family/friend visa allows you to travel to Ireland to visit family or friends for up to 90 days, subject to the conditions. All short stay visas are also called 'C' visas.
+
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Conference or event visa<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq3" class="collapse" data-bs-parent=".faq-list">
+          <p>
+            A short stay conference/event visa allows you to travel to Ireland for up to 90 days to attend a conference, symposium or other event. All short stay visas are also called 'C' visas.
+
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Exam visa <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+          <p>
+          A short stay exam visa allows you to travel to Ireland for up to 90 days to sit an exam that is necessary for your current employment or course of study. All short stay visas are also called 'C' visas.
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Join ship visa <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq5" class="collapse" data-bs-parent=".faq-list">
+          <p>
+            A short stay join ship visa allows you to come to Ireland as a seafarer to join a ship that is departing from this country. All short stay visas are also called 'C' visas.
+
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Medical treatment visa<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq6" class="collapse" data-bs-parent=".faq-list">
+        <p>A short stay medical treatment visa allows you to come to Ireland for up to 90 days for a medical procedure in a private hospital. All short stay visas are also called 'C' visas.</p>
+        </div>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq7" class="collapsed question">Training visa<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq7" class="collapse" data-bs-parent=".faq-list">
+
+            <p>A short stay training visa allows you to come to Ireland to attend a training course for up to 90 days. All short stay visas are called 'C' visas.</p>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq8" class="collapsed question">Visa for non-EU/EEA & non-Swiss citizen travelling with EU/EEA/Swiss family<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq8" class="collapse" data-bs-parent=".faq-list">
+            <ul>
+              If you are a non-EEA national:
+              <li><i class="ri-check-double-line"></i>  who does not hold a document called “Residence card of a family member of a Union citizen” as referred to in Articles 5(2) and 10(1) of Directive 2004/38/EC on the rights of citizens of the Union and their family members to move and reside freely within the territory of Member States, and</li>
+              <li><i class="ri-check-double-line"></i>wishes to accompany or join an EU/EEA/Swiss citizen family member who is moving to or residing in Ireland pursuant to the Directive 2004/38/EC,</li>
+              <li><i class="ri-check-double-line"></i>You can apply for a single journey short-stay C visa which will permit you to enter and reside in the State for up to 3 months.</li>
+              <li><i class="ri-check-double-line"></i>In the event that you wish to remain in the State for more than 3 months as a family member of an EU citizen exercising their free movement rights, you must apply (when in the State) for a Residence Card of a family member of a Union citizen.</li>
+            </ul>
+      </li>
+
+      <li>
+        <div data-bs-toggle="collapse" href="#faq9" class="collapsed question">Other visa types <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+        <div id="faq9" class="collapse" data-bs-parent=".faq-list">
+
+          <ul>
+            <li><i class="ri-check-double-line"></i>Employment (Atypical Working Scheme) visa</li>
+            <li><i class="ri-check-double-line"></i>Marriage Visa</li>
+            <li><i class="ri-check-double-line"></i>Internship (paid)</li>
+            <li><i class="ri-check-double-line"></i>Internship (unpaid)</li>
+          </ul>
+      </li>
+
+    </ul>
+
+  </div>
+</section><!-- End F.A.Q Section -->
 </main>
 {% endblock %}
