--- a/ireland_app/templates/studentvisa.html
+++ b/ireland_app/templates/studentvisa.html
@@ -10,28 +10,27 @@
   <div class="container">
 
     <div class="section-title">
-      <p>Short Stay Visas (less than 3 months)</p>
-      <i>Before making an application for a short stay ‘C’ visa please ensure that you are familiar with the policy that underpins consideration of applications for short stay visas.
-</i>
+      <p>Student visa</p>
+      <i>The large investments Ireland has made in its higher education system is one of the reasons why the country has welcomed so many international students over the last years. Irish universities are among the best academic institutions in an increasing number of academic subjects.</i>
     </div>
 
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-4" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
           <i class="ri-gps-line"></i>
-          <h4 class="d-none d-lg-block">Policy for consideration of short stay ‘C’ visas</h4>
+          <h4 class="d-none d-lg-block">Advantage of Ireland Education System</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
           <i class="ri-body-scan-line"></i>
-          <h4 class="d-none d-lg-block">Assessment criteria</h4>
+          <h4 class="d-none d-lg-block">Most popular academic disciplines in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
           <i class="ri-sun-line"></i>
-          <h4 class="d-none d-lg-block">Other imp policy</h4>
+          <h4 class="d-none d-lg-block">best universities in Ireland</h4>
         </a>
       </li>
       <!-- <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
@@ -46,18 +45,21 @@
       <div class="tab-pane active show" id="tab-1">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Policy for consideration of short stay ‘C’ visas</h3>
+            <h3>Advantage of Ireland Education System</h3>
 
-            <p>
-            All applicants for a short stay ‘C’ visa (whether for a single entry or multiple entries) must show that they have sufficiently strong family, social or economic ties to a place of residence in a country other than Ireland to assure the visa officer assessing the application that the projected stay in Ireland will be temporary and in accordance with the duration and conditions of the permission granted by the immigration authorities on arrival in Ireland. The maximum stay allowed under a short stay ‘C’ visa is 90 days.
-            </p>
-            <p>
-            The responsibility for demonstrating substantial ties to a country other than Ireland rests with you. The burden of proof in all cases is on you to satisfy the visa officer. The visa officer may verify any evidence submitted in support of your application.
-            </p>
-            <p>
-              There is no right to a visa nor is there one set of documents or circumstances of application that will guarantee the approval of an application. However, the documents normally required in support of an application are set out in the ‘Guide to Supporting Documentation’ for each type of short stay ‘C’ visa.
-
-            </p>
+            <ul>Here are some of the advantages that make Ireland so appealing to internationals:
+              <li><i class="ri-check-double-line"></i> the country is part of the European Union (EU)</li>
+              <li><i class="ri-check-double-line"></i> education institutions follow the Bologna system</li>
+              <li><i class="ri-check-double-line"></i>the language of instruction used in universities is English </li>
+              <li><i class="ri-check-double-line"></i>students benefit from smaller tuition fees and living costs compared to the UK</li>
+              <li><i class="ri-check-double-line"></i>Ireland is known for its friendly people and safe environment</li>
+              <li><i class="ri-check-double-line"></i>Ireland was listed among the top countries where students are very satisfied with their study abroad experience </li>
+            </ul>
+            <p>If you've decided to study abroad in Ireland and come from an EU/EEA country or Switzerland, good news! You won’t need an Irish student visa. If you're not from the EU/EEA, follow the next steps and prepare to apply for your student visa.</p>
+<p></p>
+          <i style="color:green;">Apply to an Irish university and get your acceptance letter</i>
+<p></p>
+          <p>If you’re still not sure where you want to study in Ireland, you will have to decide before you can start your student visa application process. After being accepted at an Irish university, you’ll get an acceptance letter required for the visa application.</p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
             <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
@@ -67,18 +69,15 @@
       <div class="tab-pane" id="tab-2">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Assessment criteria</h3>
+            <h3>Most popular academic disciplines in Ireland</h3>
 
-            <p class="font-italic">
-              In assessing an application, a visa officer may look at the following issues:
-            </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> that you will leave Ireland at the end of your visit;</li>
-              <li><i class="ri-check-double-line"></i>that you, or relatives or friends in Ireland who are sponsoring your visit, have enough money to support and accommodate you, without you working or accessing public funds;</li>
-              <li><i class="ri-check-double-line"></i>that you have proof of return or onward travel arrangements; </li>
-              <li><i class="ri-check-double-line"></i>that you will not breach the Common Travel Area by seeking to enter the UK via Ireland without a valid UK visa; </li>
-              <li><i class="ri-check-double-line"></i>your immigration history in relation to Ireland, the UK, the Schengen Zone and other countries; and </li>
-              <li><i class="ri-check-double-line"></i>any other issue which the visa officer deems relevant. </li>
+              <li><i class="ri-check-double-line"></i> <a href="https://www.mastersportal.com/search/masters-degrees/computer-science-it-in-ireland/?q=ci-14%7Cdi-24%7Clv-master">Masters in Computer Science in Ireland</a>  </li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/search/masters-degrees/education-in-ireland/?q=ci-14%7Cdi-8%7Clv-master"> Masters in Education in Ireland</a></li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/search/masters-degrees/sociology-in-ireland/?q=ci-14%7Cdi-80%7Clv-master">Masters in Sociology in Ireland</a>   </li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/search/masters-degrees/political-science-in-ireland/?q=ci-14%7Cdi-316%7Clv-master">Masters in Political Science in Ireland  </a> </li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/search/masters-degrees/management-organisation-leadership-in-ireland/?q=ci-14%7Cdi-89%7Clv-master"> Masters in Management in Ireland </a></li>
+              <!-- <li><i class="ri-check-double-line"></i>any other issue which the visa officer deems relevant. </li> -->
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -89,29 +88,15 @@
       <div class="tab-pane" id="tab-3">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>History of serious crime/immigration abuses</h3>
-            <p>
-            If you have a history of serious crimes or a history of serious breaches of Irish or UK immigration law these can, of themselves, be reasons for refusal of a visa.
-            </p>
-
-            <h3>Submission of false/misleading information/documentation</h3>
-            <p>
-              <b>Important:</b> Do not include false or misleading information or documents in your application. If you do, your application may be refused. In some circumstances, you may not be allowed to appeal the visa decision and may be blocked from getting an Irish visa for 5 years.</p>
-              <i>This is the norm in many countries.</i>
+            <h3>Best universities in Ireland</h3>
             <ul>
-              <li><i class="ri-check-double-line"></i> A short stay 'C' visa is for 90 days or less.</li>
-              <li><i class="ri-check-double-line"></i>A short stay tourist visa allows you to travel to Ireland for tourism or study for up to 90 days, subject to the conditions described below. All short stay visas are also called 'C' visas.</li>
-              <!-- <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li> -->
+              <li><i class="ri-check-double-line"></i> <a href="https://www.mastersportal.com/universities/595/university-college-dublin.html">University College Dublin</a>  </li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/universities/219/university-college-cork.html"> University College Cork</a></li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/universities/780/dublin-city-university.html">Dublin City University</a>   </li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/universities/212/university-of-limerick.html">University of Limerick  </a> </li>
+              <li><i class="ri-check-double-line"></i><a href="https://www.mastersportal.com/universities/127/dublin-institute-of-technology.html"> Dublin Institute of Technology </a></li>
+              <!-- <li><i class="ri-check-double-line"></i>any other issue which the visa officer deems relevant. </li> -->
             </ul>
-            <i>Summary</i>
-          <ul>
-            <li><i class="ri-check-double-line"></i>that you will leave Ireland before your visa/permission to remain expires;</li>
-            <li><i class="ri-check-double-line"></i>that you have sufficient resources to look after yourself while you are here;</li>
-            <li><i class="ri-check-double-line"></i>that you are of good character and have told the truth in your application and have not left out anything important;</li>
-            <li><i class="ri-check-double-line"></i>that you are not using a visa to Ireland as a way of getting around lawful entry to the UK or the rest of the EU.</li>
-
-            <!-- <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li> -->
-          </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
             <img src="assets/img/features-3.png" alt="" class="img-fluid">
